--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="DSC01997y.jpg" alt="Profile Picture">
+					<img class="profile-pic" src="DSC01997y.JPG" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Seiyu  Corporate Strategy</p>
 				</div>
 				<div class="col">
-					<img src="bc_base_1.jpg" alt="Company Logo">
+					<img src="bc_base_1.JPG" alt="Company Logo">
 				</div>
 			</div>
 		</div>
