--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Janika Bachmann</p>
+					<p class="text-name">Janika Bachmann　　ヤニカ　バッハマン</p>
 					<p class="text-title-company">Advanced Retail Analytics</p>
 					<p class="text-title-company">Seiyu  Corporate Strategy</p>
 				</div>
