--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Janika Bachmann　　ヤニカ　バッハマン</p>
-					<p class="text-title-company">Advanced Retail Analytics</p>
-					<p class="text-title-company">Seiyu  Corporate Strategy</p>
+					<p class="text-title-company">Seiyu Corporate Strategy</p>
+					<p class="text-title-company">_</p>
 				</div>
 				<div class="col">
 					<img src="bc_base_1.JPG" alt="Company Logo">
