--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Janika Bachmann　　ヤニカ　バッハマン</p>
-					<p class="text-title-company">Seiyu Corporate Strategy</p>
-					<p class="text-title-company">_</p>
+					<p class="text-title-company">Growth Lead, North East Asia</p>
+					<p class="text-title-company">Marketing & Category Development</p>
 				</div>
 				<div class="col">
 					<img src="bc_base_1.JPG" alt="Company Logo">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:janika_bachmann@walmart.com">
+		<a href="mailto:janika.bachmann@kraftheinz.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">janika_bachmann@walmart.com</p>
+						<p class="text-detail">janika.bachmann@kraftheinz.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+7012906774">
+		<a href="tel:+8041602635">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">070 1290 6774</p>
+						<p class="text-detail">080 4160 2635</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.seiyu.co.jp">
+		<a href="https://www.kraftheinz.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">seiyu.co.jp</p>
+						<p class="text-detail">kraftheinz.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/Seiyu+Akabane/@35.7783166,139.7213312,17z/data=!3m1!4b1!4m5!3m4!1s0x601892fd6f0be0c7:0xbba98413327d371a!8m2!3d35.7783166!4d139.7235199">
+		<a href="https://www.google.com/maps/place/%E3%83%8F%E3%82%A4%E3%83%B3%E3%83%84%E6%97%A5%E6%9C%AC%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE/@35.7013904,139.7792345,17z/data=!3m1!4b1!4m5!3m4!1s0x60188ea562df876d:0xdcc7dc214d650438!8m2!3d35.7014236!4d139.7810593">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">1-1 Akabane 2-Chome Kita-ku Tokyo 115-0045 Japan</p>
+						<p class="text-detail">CS Tower 11F, 5-20-8, Asakusabashi, Taito-ku, Tokyo 111-8505 Japan</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
