--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Marketing & Category Development</p>
 				</div>
 				<div class="col">
-					<img src="bc_base_1.JPG" alt="Company Logo">
+					<img src="bc_base_1.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
