--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Janika Bachmann</p>
-					<p class="text-title-company">Growth Lead, North East Asia</p>
-					<p class="text-title-company">Marketing & Category Development</p>
+					<p class="text-title-company">Ferrero Japan</p>
+					<p class="text-title-company">Head of Trade Marketing and Ecommerce Activation Japan</p>
 				</div>
 				<div class="col">
-					<img src="bc_base_1.jpg" alt="Company Logo">
+					<img src="Ferrero.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:janika.bachmann@kraftheinz.com">
+		<a href="mailto:janika.bachmann@ferrero.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">janika.bachmann@kraftheinz.com</p>
+						<p class="text-detail">janika.bachmann@ferrero.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+8041602635">
+		<a href="tel:+8046169019">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">080 4160 2635</p>
+						<p class="text-detail">080 4616 9019</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.kraftheinz.com">
+		<a href="https://www.ferrero.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">kraftheinz.com</p>
+						<p class="text-detail">ferrero.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -98,7 +98,7 @@
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">CS Tower 11F, 5-20-8, Asakusabashi, Taito-ku, Tokyo 111-8505 Japan</p>
+						<p class="text-detail">Iwatoku Bldg. 6F, 1-9, Ebisu-Minami 1 Chome, Shibuya-ku, Tokyo 150-0022 Japan</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
