--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/%E3%83%8F%E3%82%A4%E3%83%B3%E3%83%84%E6%97%A5%E6%9C%AC%E6%A0%AA%E5%BC%8F%E4%BC%9A%E7%A4%BE/@35.7013904,139.7792345,17z/data=!3m1!4b1!4m5!3m4!1s0x60188ea562df876d:0xdcc7dc214d650438!8m2!3d35.7014236!4d139.7810593">
+		<a href="https://www.google.com/maps/place/%E6%97%A5%E6%9C%AC%E3%83%95%E3%82%A7%E3%83%AC%E3%83%AD%E3%88%B1/@35.6463808,139.7056692,17z/data=!3m2!4b1!5s0x60188b41c7a5ee51:0xce4031d36033486b!4m6!3m5!1s0x60188b54095bb38b:0x1fbd7bb370d2b89a!8m2!3d35.6463765!4d139.7082495!16s%2Fg%2F11j7d8gs0t?entry=ttu">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
