--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<div class="col is-6">
 					<p class="text-name">Janika Bachmann</p>
 					<p class="text-title-company">Ferrero Japan</p>
-					<p class="text-title-company">Senior Brand Manager, Premium Praline Japan</p>
+					<p class="text-title-company">Senior Brand Manager, Premium Chocolate Japan</p>
 				</div>
 				<div class="col">
 					<img src="Ferrero.png" alt="Company Logo">
