--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Janika Bachmann</p>
-					<p class="text-title-company">Ferrero Japan</p>
-					<p class="text-title-company">Senior Brand Manager, Premium Chocolate Japan</p>
+					<p class="text-title-company"> Lindt & Sprüngli Japan </p>
+					<p class="text-title-company">Commercial Transformation PMO</p>
 				</div>
 				<div class="col">
-					<img src="Ferrero.png" alt="Company Logo">
+					<img src="LindtLogo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:janika.bachmann@ferrero.com">
+		<a href="mailto:jbachmann@lindt.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">janika.bachmann@ferrero.com</p>
+						<p class="text-detail">jbachmann@lindt.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+8046169019">
+		<a href="tel:+8017071859">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">080 4616 9019</p>
+						<p class="text-detail">080 1707 1859</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.ferrero.com">
+		<a href="https://www.lindt.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">ferrero.com</p>
+						<p class="text-detail">lindt.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/%E6%97%A5%E6%9C%AC%E3%83%95%E3%82%A7%E3%83%AC%E3%83%AD%E3%88%B1/@35.6463808,139.7056692,17z/data=!3m2!4b1!5s0x60188b41c7a5ee51:0xce4031d36033486b!4m6!3m5!1s0x60188b54095bb38b:0x1fbd7bb370d2b89a!8m2!3d35.6463765!4d139.7082495!16s%2Fg%2F11j7d8gs0t?entry=ttu">
+		<a href="https://maps.app.goo.gl/esJF8hx1KCJy6gWL8">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Iwatoku Bldg. 6F, 1-9, Ebisu-Minami 1 Chome, Shibuya-ku, Tokyo 150-0022 Japan</p>
+						<p class="text-detail">〒107-0052 Japan 東京都港区赤坂一丁目８番１号</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
